<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:fadingEdge="vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/setting_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sizeTextRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/size_setting_radio" />

        <RadioGroup
            android:id="@+id/SizeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation='horizontal'>

            <RadioButton
                android:id="@+id/smallRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/small_radio" />

            <RadioButton
                android:id="@+id/mediumRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/medium_radio" />

            <RadioButton
                android:id="@+id/largeRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/large_radio" />

        </RadioGroup>

        <TextView
            android:id="@+id/ColorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/color_text" />

        <RadioGroup
            android:id="@+id/ColorRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/lightRedRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_lightBlue" />

            <RadioButton
                android:id="@+id/lightBlueRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_lightRed" />

            <RadioButton
                android:id="@+id/lightGreenRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_lightGreen" />

            <RadioButton
                android:id="@+id/whiteRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_white" />

        </RadioGroup>

        <TextView
            android:id="@+id/disableText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/disable_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/trueFalseDisableCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/true_false_disable" />

            <CheckBox
                android:id="@+id/cheatDisableCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/cheat_button" />

            <CheckBox
                android:id="@+id/nextPrevFirstLastDisableCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/next_prev_first_last_disable" />
        </LinearLayout>

        <Button
            android:id="@+id/backButtonSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_button_button" />

    </LinearLayout>
</ScrollView>