<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quizLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="start|top">

        <LinearLayout
            android:id="@+id/score_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scores_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_bar" />

            <TextView
                android:id="@+id/scores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/settingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/setting_button_description"
            app:srcCompat="@drawable/ic_action_setting" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/true_false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/button_false"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/button_false"
            android:textAllCaps="false"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button_true"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/button_true"
            android:textAllCaps="false"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/last_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/button_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/previous_button_description"
            app:srcCompat="@drawable/ic_arrow_left" />

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/next_button_description"
            app:srcCompat="@drawable/ic_arrow_right" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/first_last"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="fill_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/first_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/first_button_description"
            app:srcCompat="@drawable/ic_action_first_question" />

        <ImageButton
            android:id="@+id/last_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/last_button_description"
            app:srcCompat="@drawable/ic_action_last_question" />

    </LinearLayout>

    <Button
        android:id="@+id/cheatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button" />

    <LinearLayout
        android:id="@+id/reset_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/reset_button_description"
            app:srcCompat="@drawable/ic_action_reset" />
    </LinearLayout>

</LinearLayout>